@@ -1,5 +1,5 @@
 //
-// "$Id: fl_set_fonts.cxx,v 1.6.2.5.2.5 2002/04/11 11:52:43 easysw Exp $"
+// "$Id: fl_set_fonts.cxx,v 1.6.2.5.2.6 2002/05/25 13:38:25 easysw Exp $"
 //
 // More font utilities for the Fast Light Tool Kit (FLTK).
 //
@@ -23,11 +23,9 @@
 // Please report all bugs and problems to "fltk-bugs@fltk.org".
 //
 
-#include <config.h>
 #include <FL/Fl.H>
 #include <FL/x.H>
 #include "Fl_Font.H"
-#include <ctype.h>
 #include "flstring.h"
 #include <stdlib.h>
 
@@ -42,5 +40,5 @@
 #endif // WIN32
 
 //
-// End of "$Id: fl_set_fonts.cxx,v 1.6.2.5.2.5 2002/04/11 11:52:43 easysw Exp $".
+// End of "$Id: fl_set_fonts.cxx,v 1.6.2.5.2.6 2002/05/25 13:38:25 easysw Exp $".
 //
